edit .env, debugging connection server.js

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=learningPg
-DB_PASSWORD=Lidmah093mmm!
-DB_PORT=5060
+DB_DATABASE=vehicle
+DB_PASSWORD=Lidmah093kkk!
+DB_PORT=5432
 PORT=8000
 JWT_SECRET=k421k4i21nnl652
